--- a/apps/builder-bob/package.json
+++ b/apps/builder-bob/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.80.2",
     "classnames": "^2.5.1",
+    "connectkit": "^1.9.0",
     "viem": "^2.30.6",
     "wagmi": "^2.15.5"
   }
