--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nx/eslint": "21.1.2",
     "@nx/eslint-plugin": "21.1.2",
     "@nx/js": "21.1.2",
@@ -34,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "hardhat": "^2.24.1",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.1.2",
