--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,16 @@ Thumbs.db
 
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
+
+# Hardhat files
+/contracts/cache
+/contracts/artifacts
+/contracts/typechain
+/contracts/typechain-types
+/contracts/coverage
+/contracts/coverage.json
+/contracts/.env
+/contracts/gas-report.txt
+
+# Local deployments
+/contracts/deployments/localhost
