--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nomicfoundation/hardhat-foundry": "^1.1.3",
     "@openzeppelin/contracts": "^5.3.0",
+    "dotenv": "^16.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0"
