--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "@nomicfoundation/hardhat-foundry": "^1.1.3",
     "@openzeppelin/contracts": "^5.3.0",
-    "dotenv": "^16.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0"
@@ -22,6 +21,7 @@
     "@nx/vite": "21.1.2",
     "@nx/web": "21.1.2",
     "@nx/workspace": "21.1.2",
+    "@parity/hardhat-polkadot": "^0.1.6",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
@@ -32,18 +32,20 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
     "autoprefixer": "10.4.13",
+    "dotenv": "^16.5.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
-    "hardhat": "^2.24.1",
+    "hardhat": "^2.24.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.1.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "solc": "^0.8.30",
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
